Add GetAll for adverts
