# internal/model/advert.go
@@ -1,10 +1,17 @@
 package model
 
 type Advert struct {
+	Id        int    `json:"id" bd:"id"`
+	Title     string `json:"title" bd:"title"`
+	MainPhoto string `json:"main_photo" bd:"main_photo"`
+	Price     int    `json:"price" bd:"price"`
+}
+
+type DetailedAdvert struct {
 	Id           int      `json:"id" bd:"id"`
-	Title        string   `json:"title" bd:"title" valid:"length(1|200)"`
-	Description  string   `json:"description" bd:"description" valid:"length(1|1000)"`
+	Title        string   `json:"title" bd:"title"`
+	Description  string   `json:"description" bd:"description"`
 	Photos       []string `json:"photos" bd:"photos"`
-	Price        int      `json:"price" bd:"price" valid:"type(int)"`
-	CreationDate int64    `json:"creation_date" bd:"creation_date" valid:"type(int)"`
+	Price        int      `json:"price" bd:"price"`
+	CreationDate int64    `json:"creation_date" bd:"creation_date"`
 }
